# pandaq

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codecov.yml  test.yml
pandaq/: __init__.py  config.py  patch.py  query.py  utils.py
pandaq/vtypes/: __init__.py  base.py  datetimes.py  ntuple.py  number.py  string.py
src/pandaq/: __init__.py  config.py  patch.py  query.py  utils.py
src/pandaq/vtypes/: __init__.py  base.py  boolean.py  datetimes.py  ntuple.py  number.py  string.py
tests/: test_ntuple.py  test_patch.py  test_query.py  test_utils.py
tests/vtypes/: test_boolean.py  test_datetimes.py  test_string.py
